--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Minha Vidaa</title>
+    <title>Minha Vida</title>
     <meta charset="utf-8">
 </head>
 <body style="font-family:Courier New;"></p>
