--- a/Index.html
+++ b/Index.html
@@ -2,16 +2,39 @@
 <html>
 
 <head>
-    <title>Minha Vida</title>
-    <meta charset="utf-8">
+    <title>Samuel Pinheiro</title>
+    <meta charset="uft-8" />
 </head>
-<body style="font-family:Courier New;"></p>
 
-   <a href="https://www.google.com.br/" target=blank>da um google></a>
-<p></p>
-<a href="https://www.amazon.com.br/ref=nav_logo"target=blan><img src="assets/imagens/logotipo.png"></a>
+<body style="background-color:rgb(255, 255, 255);margin:30px;padding: 30px;">
+    <header style="text-align:center;background-color:black;">
+        <p><img src="assets/imagens/logo.png" width="64px" height="64px"></p>
+    </header>
+    <article>
+        <section style="text-align:center;">
+            <a href="https://www.instagram.com/samuel_pinheiro24" target="_blank">
+                <h1 style="font-size:50px;color:blue;">Samuel Pinheiro</h1>
+            </a>
+        </section>
+        <section style="text-align: justify;">
+            <h2 style="font-size:35px;color:rgb(30, 0, 255);">Sobre Mim</h2>
+            <p>Sou um estudante do sesi e do senai valinhos</p>
+            <h2 style="font-size:30px;color: blue;">Meus Hobbies</h2>
+            <h3 style="font-size:25px;color: blue;">Dormir</h3>
+            <p>Gosto de dormir porque meus problemas somem</p>
+        </section>
+        <section style="text-align: justify;text-align: center;">
+            <p><img src="assets/imagens/eu.jpg" width="640px" height="360px"></p>
+            <p style="font-size:8px;">uma imagem de </p>
+            <h2 style="font-size:30px;color: blue;">Gosto de cachorrinhos</h2>
+            <p>Gosto de cachorrinhos pois me animam </p>
+        </section>
 
-<img src="assets/imagens/barra-de-chocolate-recheada-chocolate-recheado.jpg" width="1000" height="800">
-<p style="text-align:center;font-size:5000%;color:red;">Eu sou grandem e vermelho</p>
+    </article>
+
+    <footer style="background-color:black;color: aliceblue;">
+        <p>Todos os direitos Reservados</p>
+    </footer>
 </body>
+
 </html>
